--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="icon" href="images/initials.ico">
     <link rel="stylesheet" href="styles.css">
     <title>My Bio</title>
 </head>
@@ -14,22 +15,22 @@
     <!--Date: 5/16/23-->
 
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+    <nav class="navbar sticky-top navbar-expand-lg bg-black" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">IV</a>
+          <a class="navbar-brand fs-1 ms-3 fw-bold" href="#heading1">IV</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="d-lg-flex justify-content-center collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav nav-underline">
               <li class="px-5 nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="#heading2">Home</a>
               </li>
               <li class="px-5 nav-item">
-                <a class="nav-link" href="#">Knowledge</a>
+                <a class="nav-link" href="#heading3">Knowledge</a>
               </li>
               <li class="px-5 nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#heading4">About</a>
               </li>
               <li class="px-5 nav-item">
                 <a class="nav-link" href="https://github.com/isaac-vaughn1" target="_blank">My Github</a>
@@ -38,6 +39,11 @@
           </div>
         </div>
       </nav>
+
+      <!--Footer-->
+    <footer class="fixed-bottom mt-1 mx-5 pt-3 pb-1 text-center">
+        <p class="opacity-50 fs-6">&copy; Isaac Vaughn | 2023 | <a href="mailto:isaac1vaughn@gmail.com" class="link-opacity-25-hover link-dark text-decoration-none">isaac1vaughn@gmail.com</a></p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
