--- a/index.html
+++ b/index.html
@@ -1,50 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="icon" href="images/initials.ico">
-    <link rel="stylesheet" href="styles.css">
-    <title>My Bio</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="icon" href="images/initials.ico">
+  <link rel="stylesheet" href="styles.css">
+  <title>My Bio</title>
 </head>
-<body>
-    <!--Author: Isaac Vaughn-->
-    <!--Title: Online Profile-->
-    <!--Date: 5/16/23-->
 
-    <!--Navbar-->
-    <nav class="navbar sticky-top navbar-expand-lg bg-black" data-bs-theme="dark">
-        <div class="container-fluid">
-          <a class="navbar-brand fs-1 ms-3 fw-bold" href="#heading1">IV</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="d-lg-flex justify-content-center collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav nav-underline">
-              <li class="px-5 nav-item">
-                <a class="nav-link" aria-current="page" href="#heading2">Home</a>
-              </li>
-              <li class="px-5 nav-item">
-                <a class="nav-link" href="#heading3">Knowledge</a>
-              </li>
-              <li class="px-5 nav-item">
-                <a class="nav-link" href="#heading4">About</a>
-              </li>
-              <li class="px-5 nav-item">
-                <a class="nav-link" href="https://github.com/isaac-vaughn1" target="_blank">My Github</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+<body class="bg-black">
+  <!--Author: Isaac Vaughn-->
+  <!--Title: Online Profile-->
+  <!--Date: 5/16/23-->
 
-      <!--Footer-->
-    <footer class="fixed-bottom mt-1 mx-5 pt-3 pb-1 text-center">
-        <p class="opacity-50 fs-6">&copy; Isaac Vaughn | 2023 | <a href="mailto:isaac1vaughn@gmail.com" class="link-opacity-25-hover link-dark text-decoration-none">isaac1vaughn@gmail.com</a></p>
-    </footer>
+  <!--Navbar-->
+  <nav class="navbar sticky-top navbar-expand-lg bg-black" data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="navbar-brand fs-1 ms-3 fw-bold" href="#top">IV</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="d-lg-flex justify-content-center collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav nav-underline">
+          <li class="px-5 nav-item">
+            <a class="nav-link" aria-current="page" href="#top">Home</a>
+          </li>
+          <li class="px-5 nav-item">
+            <a class="nav-link" href="#knowledge">Knowledge</a>
+          </li>
+          <li class="px-5 nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="px-5 nav-item">
+            <a class="nav-link" href="https://github.com/isaac-vaughn1" target="_blank">My Github</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <!--Body Section-->
+  <p class=" mt-5 ms-5 px-3 pb-3 display-1 border border-5 rounded-bottom border-secondary text-light fw-medium lh-lg text-center"
+    style="width:6em;">
+    Welcome to My Bio
+  </p>
+
+  <div class="bg-light d-flex align-items-center justify-content-center" style="height:6.5em; margin-top:15em;">
+    <p class="txtShrink text-black text-center fw-bolder display-3 pt-2">SUPER - INTERESTING - TEXT</p>
+  </div>
+
+
+
+  <!--Footer-->
+  <footer class="mt-1 mx-5 pt-1 text-center text-light">
+    <p class="opacity-50 fs-6">&copy; Isaac Vaughn | 2023 | <a href="mailto:isaac1vaughn@gmail.com"
+        class="link-opacity-25-hover link-light text-decoration-none">isaac1vaughn@gmail.com</a></p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
