added knowledge section text/styles

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
   </p>
 
   <!--Knowledge Section-->
-  <div class="bg-dark d-flex align-items-center justify-content-center" style="height:6.5em; margin-top:15em;">
+  <div id="knowledge" class="bg-dark d-flex align-items-center justify-content-center"
+    style="height:6.5em; margin-top:15em;">
     <p class="txtShrink text-light text-center fw-bolder display-3 pt-2">KNOWLEDGE</p>
   </div>
 
@@ -60,32 +61,51 @@
 
       <!--Row 1 -- Left Column-->
       <div class="col-6 infoRow">
-        <div class="p-3 display-1 border border-5 rounded-bottom border-secondary text-light fw-medium lh-lg text-center text-light">HTML/CSS Certified</div>
+        <div
+          class="p-3 display-1 border border-5 rounded-bottom border-secondary text-light fw-medium lh-lg text-center text-light">
+          HTML/CSS Certified</div>
       </div>
 
       <!--Right Column-->
       <div class="col-6 d-flex align-items-center justify-content-center infoRow">
-        <div class="p-3 text-light">[TEXT GOES HERE]</div>
+        <div class="p-3 text-light">I am a HTML/CSS certified dynamic web designer with a passion for crafting
+          engaging online experiences. With a solid grasp of CSS/HTML, I bring creativity and technical proficiency to
+          my projects, ensuring visually appealing and user-friendly websites. <br><br>
+          While I continue to refine my skills, I stay committed to keeping up with emerging trends and technologies in
+          the world
+          of web design. This dedication ensures that I am equipped to deliver innovative solutions that keep up with
+          industry standards.</div>
       </div>
 
       <!--Row 2 -- Left Column-->
       <div class="col-6 d-flex align-items-center justify-content-center infoRow">
-        <div class="p-3 text-light">[TEXT GOES HERE]</div>
+        <div class="p-3 text-light">I am a proficient C# developer with a strong background in both personal and school
+          projects. Through hands-on experience and formal education, I have honed my skills in C# programming, giving
+          me the ability to create innovative and efficient software solutions.</div>
       </div>
 
       <!--Right Column-->
       <div class="col-6 infoRow">
-        <div class="p-3 display-1 border border-5 rounded-bottom border-secondary text-light fw-medium lh-lg text-center text-light">C# Proficient</div>
+        <div
+          class="p-3 display-1 border border-5 rounded-bottom border-secondary text-light fw-medium lh-lg text-center text-light">
+          C# Proficient</div>
       </div>
 
       <!--Row 3 -- Left Column-->
       <div class="col-6 d-flex align-items-center justify-content-center infoRow">
-        <div class="p-3 display-1 border border-5 rounded-bottom border-secondary text-light fw-medium lh-lg text-center text-light">Pursuing CS Bachelor's</div>
+        <div
+          class="p-3 display-1 border border-5 rounded-bottom border-secondary text-light fw-medium lh-lg text-center text-light">
+          Pursuing CS Bachelor's</div>
       </div>
 
       <!--Right Column-->
       <div class="col-6 d-flex align-items-center justify-content-center infoRow">
-        <div class="p-3 text-light">[TEXT GOES HERE]</div>
+        <div class="p-3 text-light">I'm a dedicated student working toward earning my Bachelor's degree
+          in computer science. The world of software development has long interested me, and I'm committed refining my skills across different areas of this field. <br><br>
+          Aside from my academic pursuits, I'm always on the lookout for chances to put my knowledge into practice
+          through personal and school projects. These hands-on experiences have been vital to boosting my
+          problem-solving skills, allowing for effective collaboration with teammates, and giving me valuable
+          firsthand exposure to creating innovative solutions.</div>
       </div>
 
     </div> <!--End of Grid-->
