--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
     <p class="txtShrink text-light text-center fw-bolder display-3 pt-2">KNOWLEDGE</p>
   </div>
 
-  <div class="container text-center">
+  <div class="container text-center infoContainer">
     <div class="row g-5">
 
-      <!--Row 1 -- Left Column-->
+      <!--Left Column-->
       <div class="col-6 infoRow">
         <div
           class="p-3 display-1 border border-5 rounded-bottom border-secondary text-light fw-medium lh-lg text-center text-light">
@@ -67,21 +67,23 @@
       </div>
 
       <!--Right Column-->
-      <div class="col-6 d-flex align-items-center justify-content-center infoRow">
-        <div class="p-3 text-light">I am a HTML/CSS certified dynamic web designer with a passion for crafting
+      <div class="col-6 d-flex align-items-center justify-content-center flex-column">
+        <h3 class="p-3 text-light infoTitle">HTML/CSS CERTIFIED</h3>
+        <p class="p-3 text-light lh-md">I am a HTML/CSS certified dynamic web designer with a passion for crafting
           engaging online experiences. With a solid grasp of CSS/HTML, I bring creativity and technical proficiency to
           my projects, ensuring visually appealing and user-friendly websites. <br><br>
           While I continue to refine my skills, I stay committed to keeping up with emerging trends and technologies in
           the world
           of web design. This dedication ensures that I am equipped to deliver innovative solutions that keep up with
-          industry standards.</div>
+          industry standards.</p>
       </div>
 
-      <!--Row 2 -- Left Column-->
-      <div class="col-6 d-flex align-items-center justify-content-center infoRow">
-        <div class="p-3 text-light">I am a proficient C# developer with a strong background in both personal and school
+      <!--Left Column-->
+      <div class="col-6 d-flex align-items-center justify-content-center flex-column">
+        <h3 class="p-3 text-light infoTitle">C# PROFICIENT</h3>
+        <p class="p-3 text-light lh-md">I am a proficient C# developer with a strong background in both personal and school
           projects. Through hands-on experience and formal education, I have honed my skills in C# programming, giving
-          me the ability to create innovative and efficient software solutions.</div>
+          me the ability to create innovative and efficient software solutions.</p>
       </div>
 
       <!--Right Column-->
@@ -91,30 +93,52 @@
           C# Proficient</div>
       </div>
 
-      <!--Row 3 -- Left Column-->
-      <div class="col-6 d-flex align-items-center justify-content-center infoRow">
+      <!--Left Column-->
+      <div class="col-6 infoRow">
         <div
           class="p-3 display-1 border border-5 rounded-bottom border-secondary text-light fw-medium lh-lg text-center text-light">
           Pursuing CS Bachelor's</div>
       </div>
 
       <!--Right Column-->
-      <div class="col-6 d-flex align-items-center justify-content-center infoRow">
-        <div class="p-3 text-light">I'm a dedicated student working toward earning my Bachelor's degree
-          in computer science. The world of software development has long interested me, and I'm committed refining my skills across different areas of this field. <br><br>
+      <div class="col-6 d-flex align-items-center justify-content-center flex-column">
+        <h3 class="p-3 text-light infoTitle">PURSUING CS BACHELOR'S</h3>
+        <p class="p-3 text-light lh-md">I'm a dedicated student working toward earning my Bachelor's degree
+          in computer science. The world of software development has long interested me, and I'm committed refining my
+          skills across different areas of this field. <br><br>
           Aside from my academic pursuits, I'm always on the lookout for chances to put my knowledge into practice
           through personal and school projects. These hands-on experiences have been vital to boosting my
           problem-solving skills, allowing for effective collaboration with teammates, and giving me valuable
-          firsthand exposure to creating innovative solutions.</div>
+          firsthand exposure to creating innovative solutions.</p>
       </div>
 
     </div> <!--End of Grid-->
   </div> <!--End of Grid Container-->
 
   <!--About Section-->
-  <div class="bg-dark d-flex align-items-center justify-content-center" style="height:6.5em;">
+  <div id="about" class="bg-dark d-flex align-items-center justify-content-center" style="height:6.5em;">
     <p class="txtShrink text-light text-center fw-bolder display-3 pt-2">ABOUT ME</p>
   </div>
+
+  
+    <div class="container text-center infoContainer">
+      <div class="row g-5">
+
+        <!--Left Column-->
+        <div class="col-6 infoRow">
+          <div
+            class="p-3 display-1 border border-5 rounded-bottom border-secondary text-light fw-medium lh-lg text-center text-light">
+            ABOUT ME</div>
+        </div>
+
+        <!--Right Column-->
+        <div class="infoItem col-6 d-flex align-items-center justify-content-center flex-column">
+          <h3 class="p-3 text-light infoTitle">ABOUT ME</h3>
+          <p class="p-3 text-light lh-md">From a small town in Missouri, my interest in computer science stemmed from the time I played my first video game. However, I didn't enter the space until junior year of high school when I had my first programming class. The rest is history. I am now enrolled in college and am pursuing my Bachelor's in computer science. I look forward to what's to come and am excited to learn more about the industry.</p>
+        </div>
+      </div>
+    </div>
+  
 
   <!--Footer-->
   <footer class="mt-1 mx-5 pt-1 text-center text-light">
