added fade-in animation

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </nav>
 
   <!--Top Section-->
-  <p class="mt-5 ms-5 px-3 pb-3 display-1 border border-5 rounded-bottom border-secondary text-light fw-medium lh-lg text-center"
+  <p class="mt-5 ms-5 px-3 pb-3 display-1 border border-5 rounded-bottom border-secondary text-light fw-medium lh-lg text-center welcome"
     style="width:6em;">
     Welcome to My Bio
   </p>
