--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="col-6 d-flex align-items-center justify-content-center flex-column">
         <h3 class="p-3 text-light infoTitle">PURSUING CS BACHELOR'S</h3>
         <p class="p-3 text-light lh-md">I'm a dedicated student working toward earning my Bachelor's degree
-          in computer science. The world of software development has long interested me, and I'm committed refining my
+          in computer science. The world of software development has long interested me, and I'm committed to refining my
           skills across different areas of this field. <br><br>
           Aside from my academic pursuits, I'm always on the lookout for chances to put my knowledge into practice
           through personal and school projects. These hands-on experiences have been vital to boosting my
